Fixed rules popping out of container
gave small minesweeper rules a scroll overflow

--- a/src/styles/components/minesweeper.scss
+++ b/src/styles/components/minesweeper.scss
@@ -64,9 +64,6 @@ h2{
 .rules{
     @include full-screen-message;
 
-    height: 611px;
-    transform: translate(0, -25%);
-
     .button-close-rules{
         @include text-button;
     }
