--- a/src/styles/components/mixins.scss
+++ b/src/styles/components/mixins.scss
@@ -18,11 +18,13 @@
     display: none;
     height: 100%;
     justify-content: space-around;
+    padding: 5px 0;
     position: absolute;
     text-align: center;
     width: 100%;
 
     .description{
+        overflow: scroll;
         padding: 0 25px;
         position: relative;
         transform: translate();
